fixes #2, wrapped all elements in index.html in divs, reference those divs in css and js

--- a/exp/css/style.css
+++ b/exp/css/style.css
@@ -1,15 +1,50 @@
 body {
-    margin: 0 auto;
-    margin-top: 20px;
-    width: 800px;
-    text-align: center;
+    margin: 20px;
+    padding: 0px;
+}
+
+#instructions {
+  margin-bottom: 20px;
 }
 
 #instruction-checks {
-    width: 600px;
-    text-align: left;
+    width: 700px ;
+    margin-left: auto ;
+    margin-right: auto ;
+}
+
+#sliderStuff {
+    text-align: center;
+    display: none;
 }
 
 #slider {
     width: 400px;
+    margin: auto;
 }
+
+#imageSpace {
+  width: 400px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+#doneTxt {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#buttons {
+    text-align: center;
+    display: none;
+}
+
+.text {
+    width: 700px ;
+    margin-left: auto ;
+    margin-right: auto ;
+    text-align: center;
+}
+
